--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "biblu",
   "version": "1.0.0",
   "description": "credits to:\r     https://github.com/thiagobodruk/bible/tree/master",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon ./backend/app.js"
+    "dev": "npx nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "nodemon": "^3.0.1"
